Fixed validation, Fixed mobile height for readabilitiy

--- a/register.css
+++ b/register.css
@@ -1,26 +1,18 @@
-
-#terminal-overlay {
-	background: rgba(0, 0, 0, 0.85);
-	width: 100%;
-	height: 100%;
-	position: fixed;
-	top: 0;
-	left: 0;
-
-	opacity: 1;
-	transition: all 1s ease-out 0s;
+body {
+	margin: 0;
+	padding: 0;
 }
 
 #terminal {
 	display: inline-block;
 
-	position: absolute;
-	left: 50%;
-	top: 50%;
-	transform: translate(-50%, -50%);
+	margin: 0 auto;
 
-	box-shadow: 5px 5px 20px 0px rgba(0, 0, 0, 0.2);
 	transition: all 0.5s ease-out 0s;
+}
+
+#terminal > table {
+	box-shadow: 5px 5px 20px 0px rgba(0, 0, 0, 0.2);
 }
 
 #terminal > table > tbody > tr > td {
@@ -36,5 +28,6 @@
 #terminal .termReverse { background: white }
 
 #dummy {
-	z-index: -1
+	z-index: -1;
+	opacity: 0;
 }
